--- a/lib/generators/templates/mutx.conf.tt
+++ b/lib/generators/templates/mutx.conf.tt
@@ -18,7 +18,7 @@
 
   "execution_check_time" : 5,
 
-  "project_name" : "Awesome Project",
+  "project_name" : "Mutx",
 
   "project_url" : "http://your.project.url",
 
