--- a/lib/generators/templates/mutx.conf.tt
+++ b/lib/generators/templates/mutx.conf.tt
@@ -31,6 +31,12 @@
   "refresh_time" : 10,
 
   "notification" : {
+    "smtp_address" : null,
+    "smtp_port" : null,
+    "smtp_domain" : null,
+    "smtp_user" : null,
+    "smtp_password" : null,
+    "smtp_autentication" : null,
     "use_gmail" : false,
     "username" : null,
     "password" : null,
