Many changes on mail template, fixes on ui and backend stuffs

--- a/lib/generators/templates/mutx.conf.tt
+++ b/lib/generators/templates/mutx.conf.tt
@@ -41,6 +41,7 @@
     "username" : null,
     "password" : null,
     "recipients" : "your@email.com",
+    "smtp_enable_start_tls_auto" : true,
     "attach_report" : false
   },
 
