visual changes and doc

--- a/lib/generators/templates/mutx_body_template.html.erb
+++ b/lib/generators/templates/mutx_body_template.html.erb
@@ -1,4 +1,4 @@
-<html style='background-color: lightgrey'>
+<html>
 <tbody>
   <img src="https://ci5.googleusercontent.com/proxy/A-quKChfId5qpYvXm_zcW-GEnolJEGQ4PeGkq50pBYmi5QHH-uoN22ysfGajMcE2lKvhMLJTemZwYYnh3MbzlR1IHzu6sZHu5VNS0pjR455lwdKxhgI8Og=s0-d-e1-ft#http://app2.dopplerfiles.net/Users/3778/Campaigns/8930766/logo.png" alt="Garbarino - Pensamos en vos" border="0" width="100%" style="display:block;margin:0 auto;border:0;max-width:300px;min-height:auto;outline:0" class="CToWUd"></a></td></tr>
   <tr>
@@ -11,14 +11,14 @@
       <div class='container'>
         <br>
         <div class='well'>
-          <h3 style='color:Black; font-size: 12px;'>Result for:<b style='color:Red; font-size: 14px;'>' <%= task_name %>'</b> execution </h3>
-          <h6 style='color:Black; font-size: 12px;'><b>Result ID:</b><b style='color:Red; font-size: 14px;'> '<%= id %>'</b></h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Status:</b><b style='color:Red; font-size: 14px;'> '<%= status %>'</b></b></h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Duration:</b><b style='color:Red; font-size: 14px;'> '<%= time %>'</b> seconds</h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Summary:</b><b style='color:Red; font-size: 14px;'> '<%= info %>'
+          <h3 style='color:Black; font-size: 12px;'><b>Result for:</b>'<%= task_name %>' execution </h3>
+          <h6 style='color:Black; font-size: 12px;'><b>Result ID:</b>'<%= id %>'</h6>
+          <h6 style='color:Black; font-size: 12px;'><b>Status:</b>'<%= status %>'</h6>
+          <h6 style='color:Black; font-size: 12px;'><b>Duration:</b>'<%= time %>' seconds</h6>
+          <h6 style='color:Black; font-size: 12px;'><b>Summary:</b>'<%= info %>'
           <br>
           <br>
-          <h3 style='color:Grey; font-size: 13px;'><b>Adjunto se encuentra el output de la ejecucion solicitada</b></h3>
+          <h3 style='color:Grey; font-size: 13px;'><b>The execution output is attached</b></h3>
           <h6>&nbsp;</h6>
         </div>
 <tr>
@@ -31,14 +31,8 @@
                      <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
                          <tr><td width="100%" height="10" valign="top"></td></tr>
                          <tr>
-                             <td width="100%" valign="top" bgcolor="#FFFFFF" style="font-family: sans-serif; font-size: 17px; line-height: 16px; color: #d22222; text-align: center;">
-                                 GRACIAS POR UTILIZAR MUTX
-                             </td>
-                         </tr>
-                         <br>
-                         <tr>
                              <td width="100%" valign="top" bgcolor="#FFFFFF" style="font-family: sans-serif; font-size: 15px; line-height: 16px; color: #d22222; text-align: center;">
-                                 Este email es enviado desde una casilla autom&aacute;tica. Por favor, no lo responda.
+                                 This email is sent automatically. Please, do not reply
                              </td>
                          </tr>
                          <tr><td width="100%" height="10" valign="top"></td></tr>
