fix on collapse results, fix on tasks checkboxes and added mouseover on action view, fix on template mail - attach html report, fix on status link when running, added show/hide on custom params select_list and mouseover too.

--- a/lib/generators/templates/mutx_body_template.html.erb
+++ b/lib/generators/templates/mutx_body_template.html.erb
@@ -1,6 +1,6 @@
 <html>
 <tbody>
-  <img src="https://ci5.googleusercontent.com/proxy/A-quKChfId5qpYvXm_zcW-GEnolJEGQ4PeGkq50pBYmi5QHH-uoN22ysfGajMcE2lKvhMLJTemZwYYnh3MbzlR1IHzu6sZHu5VNS0pjR455lwdKxhgI8Og=s0-d-e1-ft#http://app2.dopplerfiles.net/Users/3778/Campaigns/8930766/logo.png" alt="Garbarino - Pensamos en vos" border="0" width="100%" style="display:block;margin:0 auto;border:0;max-width:300px;min-height:auto;outline:0" class="CToWUd"></a></td></tr>
+  <img src="https://raw.githubusercontent.com/romanrod/mutx/master/img/mutx_logo.png" alt="MuTX" border="0" width="100%" style="display:block;margin:0 auto;border:0;max-width:300px;min-height:auto;outline:0" class="CToWUd"></a></td></tr>
   <tr>
     <td align="left" style="font-size:10px;border-bottom:1px solid #e5e5e5">&nbsp;</td>
   </tr>
@@ -44,5 +44,4 @@
          </table>
      </td>
  </tr>
- <!-- End Legacy -->
 </html>
