--- a/lib/generators/templates/mutx_body_template.html.erb
+++ b/lib/generators/templates/mutx_body_template.html.erb
@@ -1,47 +1,16 @@
-<html>
-<tbody>
-  <img src="https://raw.githubusercontent.com/romanrod/mutx/master/img/mutx_logo.png" alt="MuTX" border="0" width="100%" style="display:block;margin:0 auto;border:0;max-width:150px;min-height:auto;outline:0" class="CToWUd"></a></td></tr>
-  <tr>
-    <td align="left" style="font-size:10px;border-bottom:1px solid #e5e5e5">&nbsp;</td>
-  </tr>
-</tbody>
-<tr>
-  <td height="1" align="center" bgcolor="#ffffff" style="font-size:1px"><img src="https://ci4.googleusercontent.com/proxy/mX95orir-khAa9968ZvaEUFjay-YQnjjfRzI5YJXNG30xvJECdmEqqDPUE4KChEE5CsA-0xr-URW-1rIGpQFhhTosSDZj4LQ_ktxrrYjsrJXrntn8L8oOIU=s0-d-e1-ft#http://app2.dopplerfiles.net/Users/3778/Campaigns/8930766/520x1.png" width="100%" height="1" alt="" style="display:block" border="0" class="CToWUd"></td>
-</tr>
-      <div class='container'>
-        <br>
-        <div class='well'>
-          <h3 style='color:Black; font-size: 12px;'><b>Result for:</b>'<%= task_name %>' execution </h3>
-          <h6 style='color:Black; font-size: 12px;'><b>Result ID:</b>'<%= id %>'</h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Status:</b>'<%= status %>'</h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Duration:</b>'<%= time %>' seconds</h6>
-          <h6 style='color:Black; font-size: 12px;'><b>Summary:</b>'<%= info %>'
-          <br>
-          <br>
-          <h3 style='color:Grey; font-size: 13px;'><b>The execution output is attached</b></h3>
-          <h6>&nbsp;</h6>
-        </div>
-<tr>
-     <td class="legacy-container-width" height="100" valign="top" align="left" bgcolor="#FFFFFF">           
-         <table width="580" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF" class="legacy-container legacy-container-width">
-             <tr>
-                 <td width="0%" height="100" valign="top" align="left" bgcolor="#FFFFFF"></td>
-                 <td width="100%" height="100" valign="top" align="left" bgcolor="#FFFFFF">
-                     <!-- Beggin Legacy Content -->
-                     <table width="100%" cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#FFFFFF">
-                         <tr><td width="100%" height="10" valign="top"></td></tr>
-                         <tr>
-                             <td width="100%" valign="top" bgcolor="#FFFFFF" style="font-family: sans-serif; font-size: 15px; line-height: 16px; color: #d22222; text-align: center;">
-                                 This email is sent automatically. Please, do not reply
-                             </td>
-                         </tr>
-                         <tr><td width="100%" height="10" valign="top"></td></tr>
-                     </table>
-                     <!-- End Legacy Content -->
-                 </td>
-                 <td width="0%" height="100" valign="top" align="left" bgcolor="#FFFFFF"></td>
-             </tr>
-         </table>
-     </td>
- </tr>
-</html>
+<div><img class="CToWUd" style="margin-top: 0px; margin-bottom: 0px; border: 0px; max-width: 150px; min-height: auto; outline: 0px; float: left;" src="https://raw.githubusercontent.com/romanrod/mutx/master/img/mutx_logo.png" alt="MuTX" width="43" height="43" border="0" /></div>
+<p>&nbsp;<img class="CToWUd" style="display: block;" src="https://ci4.googleusercontent.com/proxy/mX95orir-khAa9968ZvaEUFjay-YQnjjfRzI5YJXNG30xvJECdmEqqDPUE4KChEE5CsA-0xr-URW-1rIGpQFhhTosSDZj4LQ_ktxrrYjsrJXrntn8L8oOIU=s0-d-e1-ft#http://app2.dopplerfiles.net/Users/3778/Campaigns/8930766/520x1.png" alt="" width="100%" height="1" border="0" /></p>
+<div>
+<div class="container">
+<div class="well">
+<p style="color: black; font-size: 12px;">&lt;%= task_name %&gt;'&nbsp;finished</p>
+<p style="color: black; font-size: 12px;"><strong>Summary:&nbsp;</strong>&lt;%= info %&gt;</p>
+<p style="color: black; font-size: 12px;"><strong>Duration:&nbsp;</strong>&lt;%= time %&gt; seconds&nbsp;</p>
+<p style="color: black; font-size: 12px;"><strong><strong>Status: </strong></strong>&lt;%= status %&gt;</p>
+<p style="color: black; font-size: 12px;"><strong>Result ID: </strong>&lt;%= id %&gt;</p>
+<p style="color: black; font-size: 12px;"><strong>Execution name:</strong> &lt;%= execution_name %&gt;</p>
+<p style="color: black; font-size: 12px;"><span style="color: #ff0000;"><strong>The execution output is attached</strong></span></p>
+<h6>&nbsp;This email is sent automatically. Please, do not reply</h6>
+</div>
+</div>
+</div>
