deleted color on output, modified size log on output, fixed real time output with PTY, memory clean on every worker execution, fix cron with close connection DB, launch exception if command cant run, on edit app value it shows not db value, added link to result, added favicon, added db timeout. added cron to restart mutx every 6 hours if task are not running

--- a/lib/generators/templates/cron.rb.tt
+++ b/lib/generators/templates/cron.rb.tt
@@ -16,6 +16,7 @@ module Cron
 		        Mutx::API::Execution.start task_name, query_string
 		    end
 		  end
+		  Mutx::Database::MongoConnector.force_close
 		end
 	end#class
 end#module
