Filter on task list, changes on templete mail to show output, change on the way to timeout an execution

--- a/lib/generators/templates/mutx_body_template.html.erb
+++ b/lib/generators/templates/mutx_body_template.html.erb
@@ -12,7 +12,14 @@
 					<p style="color: black; font-size: 12px;"><strong>Duration:&nbsp;</strong> '<%= time %>' seconds&nbsp;</p>
 					<p style="color: black; font-size: 12px;"><strong><strong>Status: </strong></strong>'<%= status %>'</p>
 					<p style="color: black; font-size: 12px;"><strong>Result ID: </strong> '<%= id %>' </p>
-					<p style="color: black; font-size: 12px;"><span style="color: #ff0000;"><strong>The execution output is attached</strong></span></p>
+					<h3>
+					<medium>
+					  <pre style="height:400px; white-space:pre; word-wrap:normal;">
+					    <b style='color:Black; font-size: 11px;'><%= output %></b>
+					  </pre>
+					</medium>
+					</h3>
+          <p style="color: black; font-size: 12px;"><span style="color: #ff0000;"><strong>The execution output is attached</strong></span></p>
 					<h6>&nbsp;This email is sent automatically. Please, do not reply</h6>
 				</div>
 			</div>
