--- a/lib/generators/templates/config.ru.tt
+++ b/lib/generators/templates/config.ru.tt
@@ -1,6 +1,19 @@
 #!/usr/bin/env rackup
 # encoding: utf-8
 require 'mutx'
+require 'sidekiq'
 require 'sidekiq/web'
+
+#Sidekiq.configure_client do |config|
+#  config.redis = { :url => 'redis://10.211.15.195:6379/0' }
+#end
+
+#Sidekiq.configure_server do |config|
+#  config.redis = { url: 'redis://10.211.15.195:6379/0' }
+#  config.average_scheduled_poll_interval = 5
+#end
+
 map('/sidekiq') { run Sidekiq::Web }
+
 run Cuba
+#run Rack::URLMap.new('/' => Cuba, '/sidekiq' => Sidekiq::Web)
