back to mongo gem, force_close commented

--- a/lib/generators/templates/cron.rb.tt
+++ b/lib/generators/templates/cron.rb.tt
@@ -82,7 +82,7 @@ module Cron
         #  task = nil
 			  #end
 		  end#cron_task
-		  Mutx::Database::MongoConnector.force_close
+		  ##Mutx::Database::MongoConnector.force_close
 		  puts "######### ENDING CRON ##########"
 		end
 
