--- a/lib/generators/templates/restart.rb.tt
+++ b/lib/generators/templates/restart.rb.tt
@@ -26,7 +26,7 @@ module Cron
           sleep 10
           retry
         end
-      Mutx::Database::MongoConnector.force_close
+      ##Mutx::Database::MongoConnector.force_close
     end
 
     def self.check
