--- a/lib/generators/templates/mutx.conf.tt
+++ b/lib/generators/templates/mutx.conf.tt
@@ -6,6 +6,14 @@
 
   "app_port" : 8080,
 
+  "specific_vm" : false,
+
+  "proxy_one" : false,
+
+  "proxy_two" : false,
+
+  "mail_from" : "Mutx <your@email.sender.org>",
+
   "database" : {
 
     "type" : "mongodb",
@@ -24,7 +32,7 @@
 
   "inactivity_timeout" : 60,
 
-  "kill_inactive_executions_after" : 600,
+  "kill_inactive_executions_after" : 180,
 
   "datetime_format" : "%d/%m/%Y %H:%M:%S",
 
