New feature: info repos

--- a/lib/generators/templates/mutx_body_template.html.erb
+++ b/lib/generators/templates/mutx_body_template.html.erb
@@ -16,13 +16,17 @@
 					  </pre>
 					</medium>
 					</h3>
-					<p style="color: black; font-size: 12px;">'<%= task_name %>' &nbsp;finished</p>
-					<p style="color: black; font-size: 12px;"><strong>Summary:&nbsp;</strong> '<%= info %>' </p>
-					<p style="color: black; font-size: 12px;"><strong>Duration:&nbsp;</strong> '<%= time %>' seconds&nbsp;</p>
-					<p style="color: black; font-size: 12px;"><strong><strong>Status: </strong></strong>'<%= status %>'</p>
-					<p style="color: black; font-size: 12px;"><strong>Result ID: </strong> '<%= id %>' </p>
 				</div>
 			</div>
 		</div>
 	</tbody>
 </html>
+<html>
+
+<style>
+.well {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+</style>
