--- a/lib/generators/templates/mutx_template.html.erb
+++ b/lib/generators/templates/mutx_template.html.erb
@@ -13,18 +13,26 @@
 					<h3>
 						<medium>
 							<pre style="height:400px; white-space:pre; word-wrap:normal;">
-								<b style='color:Black; font-size: 12px;'><%= output %></b>
+							  <b style='color:Black; font-size: 12px;'><%= output %></b>
+							  <b style="color: black; font-size: 12px;"><strong>'<%= task_name %>' </strong> finished</b>
+							  <b style="color: black; font-size: 12px;"><strong>Duration:&nbsp;</strong>'<%= time %>' seconds&nbsp;</b>
+							  <b style="color: black; font-size: 12px;"><strong><strong>Status: </strong></strong> '<%= status %>' </b>
+							  <b style="color: black; font-size: 12px;"><strong>Result ID: </strong>'<%= id %>' </b> 
 							</pre>
 						</medium>
 					</h3>
-					<p style="color: black; font-size: 12px;"><strong>'<%= task_name %>' </strong> finished</p>
-					<p style="color: black; font-size: 12px;"><strong>Duration:&nbsp;</strong>'<%= time %>' seconds&nbsp;</p>
-					<p style="color: black; font-size: 12px;"><strong><strong>Status: </strong></strong> '<%= status %>' </p>
-					<p style="color: black; font-size: 12px;"><strong>Result ID: </strong>'<%= id %>' </p>
-					<p style="color: black; font-size: 12px;"><strong>Output</strong></p>
 				</div>
 			</div>
 		</div>
 		<div>&nbsp;</div>
 	</tbody>
 </html>
+<html>
+
+<style>
+.well {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+</style>
